# freshguard-vision

./: .gitignore  LICENSE  PRD.md  README.md  STORY.md  app.py  eval_report.json  eval_report.md  pyproject.toml
.streamlit/: config.toml
artifacts/: README.md
configs/: inference.toml
deprecated/: README.md
eval/: README.md  classifier_metrics.json  yolo_metrics_per_epoch.csv  yolo_training_config.yaml
notebooks/: kaggle_00_fetch_official_sources_v2.ipynb  kaggle_01_dataset_audit_and_split.ipynb  kaggle_01_dataset_audit_v2.ipynb  kaggle_02_prepare_detector_data_v2.ipynb  kaggle_02_pseudolabel_grounding_dino.ipynb  kaggle_03_train_detector_v2.ipynb  kaggle_03_train_detector_yolo26s.ipynb  kaggle_04_train_classifier_dinov3_v2.ipynb  kaggle_04_train_classifier_efficientnetv2s.ipynb  kaggle_05_evaluate_end_to_end.ipynb  kaggle_05_evaluate_v2.ipynb
scripts/: download_artifacts.py
src/freshness/: __init__.py  config.py  constants.py
src/freshness/inference/: classifier.py  detector.py  pipeline.py
src/freshness/ui/: content.py  runtime.py  style_assets.py  style_base.py  style_components.py  style_widgets.py  styles.py
src/freshness/ui/pages/: model_card.py  predict.py
src/freshness/utils/: images.py  labels.py
tests/: test_notebooks_v2.py  test_pipeline_v2.py  test_predict_ui.py
